scripting y estilos mejorados

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 
+    <!-- <link rel="icon" href="https://cdn-icons-png.freepik.com/512/8718/8718218.png" type="image/x-icon" /> -->
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3425/3425938.png" type="image/x-icon" />
+
 </head>
 <body>
     <!-- <div class="sidebar">
@@ -328,17 +331,17 @@
                 <tr>
                     <td>Red/Black</td>
                     <td id="recommend-red-black">Black</td>
-                    <td id="recommend-red-black-number">76.97%</td>
+                    <td id="recommend-red-black-number">0%</td>
                 </tr>
                 <tr>
                     <td>Even/Odd</td>
-                    <td id="recommend-even-odd">Even</td>
-                    <td id="recommend-even-odd-number">89.10%</td>
+                    <td id="recommend-odd-even">Even</td>
+                    <td id="recommend-odd-even-number">0%</td>
                 </tr>
                 <tr>
                     <td>1-18/19-36</td>
-                    <td id="recommend-1-18-19-36">19-36</td>
-                    <td id="recommend-1-18-19-36-number">97.56%</td>
+                    <td id="recommend-low-high">19-36</td>
+                    <td id="recommend-low-high-number">0%</td>
                 </tr>
             </tbody>
         </table>
