estilo definitivos y permite división por cero

--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
                 <table class="stat-item">
                     <tbody>
                         <tr>
-                            <td>Black</td>
+                            <td class="black-text">Black</td>
                             <td id="black-count">0</td>
                             <td id="black-probability">0%</td>
                         </tr>
                         <tr>
-                            <td>Red</td>
+                            <td class="red-text">Red</td>
                             <td id="red-count">0</td>
                             <td id="red-probability">0%</td>
                         </tr>
@@ -242,7 +242,7 @@
                 </table>
 
                 <!-- Tabla para las docenas -->
-                <table class="stat-item stat-item-custom">
+                <table id="my-table" class="stat-item stat-item-custom">
                     <tbody>
                         <tr>
                             <td>1ra Docena (1-12)</td>
