simulación de tiros

--- a/index.html
+++ b/index.html
@@ -324,8 +324,13 @@
                         <span id="roulette-label">Ruleta Europea</span>
                     </div>
 
-                    <button id="reset-button">Reset</button>
+                    <div>
+                        <label for="num-shots">Número de tiros:</label>
+                        <input type="number" id="num-shots" min="1" max="500" placeholder="Ingresa un número">
+                        <button id="simulate-button">Simular tiros</button>
+                    </div>
 
+                    <button id="reset-button">Reset</button>
 
                 </section>
 
